--- a/arm/el1_ns/Makefile
+++ b/arm/el1_ns/Makefile
@@ -1,16 +1,15 @@
-VPATH			= ../el1_common:../common
+VPATH	= $(ARCH):../el1_common/$(ARCH):../el1_common:../common
 
 EL1_NS_ELF		= el1_nsec.elf
 EL1_NS_IMAGE 	= el1_nsec.bin
 EL1_NS_LOAD		= el1_nsec.lds
 EL1_NS_OBJS		= el1_init.o \
-				  el1_exception.o \
-				  el1.o \
-				  el1_nsec.o \
-				  el1_loader.o \
-				  el1_svc.o \
-				  mem_util.o \
-				  builtins.o
+                  el1_exception.o \
+                  el1.o \
+                  el1_loader.o \
+                  el1_nsec.o \
+                  mem_util.o \
+                  builtins.o
 
 -include .*.d
 
@@ -22,13 +21,13 @@ $(EL1_NS_ELF): $(EL1_NS_OBJS) $(EL1_NS_LOAD)
 	$(LD) -o $@ $(EL1_NS_OBJS) $(FLATLIBS) --script=$(EL1_NS_LOAD)
 
 $(EL1_NS_IMAGE): $(EL1_NS_ELF)
-	$(OBJCOPY) -O binary $(EL1_NS_ELF) $(EL1_NS_IMAGE)
+	$(OBJCOPY) -O binary $< $@
 
-$(EL1_NS_LOAD): el1_nsec.lds.S Makefile
+$(EL1_NS_LOAD): el1_nsec.lds.S Makefile ../../platform/$(PLAT)/
 	$(CC) $(CFLAGS) -E -P -C -o $@ $<
 
 %.o: %.S
-	$(CC) $(CFLAGS) -c -nostdlib -o $@ $<
+	$(CC) $(CFLAGS) -c -nostdlib -o $(notdir $@) $<
 
 all: $(EL1_NS_IMAGE)
 
