--- a/arm/el1_s/Makefile
+++ b/arm/el1_s/Makefile
@@ -1,15 +1,14 @@
-VPATH			= ../el1_common:../common
+VPATH	= $(ARCH):../el1_common/$(ARCH):../el1_common:../common
 
 EL1_S_ELF		= el1_sec.elf
 EL1_S_IMAGE 	= el1_sec.bin
 EL1_S_LOAD		= el1_sec.lds
 EL1_S_OBJS		= el1_init.o \
-				  el1_exception.o \
-				  el1.o \
-				  el1_sec.o \
-				  el1_loader.o \
-				  el1_svc.o \
-				  mem_util.o \
+                  el1_exception.o \
+                  el1.o \
+                  el1_loader.o \
+                  el1_sec.o \
+                  mem_util.o \
 				  builtins.o
 
 -include .*.d
@@ -22,13 +21,13 @@ $(EL1_S_ELF): $(EL1_S_OBJS) $(EL1_S_LOAD)
 	$(LD) -o $@ $(EL1_S_OBJS) $(FLATLIBS) --script=$(EL1_S_LOAD)
 
 $(EL1_S_IMAGE): $(EL1_S_ELF)
-	$(OBJCOPY) -O binary $(EL1_S_ELF) $(EL1_S_IMAGE)
+	$(OBJCOPY) -O binary $< $@
 
-$(EL1_S_LOAD): el1_sec.lds.S Makefile
+$(EL1_S_LOAD): el1_sec.lds.S Makefile ../../platform/$(PLAT)/
 	$(CC) $(CFLAGS) -E -P -C -o $@ $<
 
 %.o: %.S
-	$(CC) $(CFLAGS) -c -nostdlib -o $@ $<
+	$(CC) $(CFLAGS) -c -nostdlib -o $(notdir $@) $<
 
 all: $(EL1_S_IMAGE)
 
