Add EL3 dispatch and initial test
Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/el3/Makefile
+++ b/el3/Makefile
@@ -1,4 +1,4 @@
-VPATH	= $(ARCH):../common/$(ARCH):../common
+VPATH	= $(ARCH):../common/$(ARCH):../common:../tztest/el3:../tztest
 
 EL3_ELF			= el3.elf
 EL3_IMAGE 		= el3.bin
@@ -8,12 +8,16 @@ EL3_OBJS		= el3_init.o \
 				  el3.o \
 				  el3_monitor_asm.o \
 				  mem_util.o \
-				  builtins.o
+				  builtins.o \
+				  tztest.o \
+				  tztest_el3.o
 
 libgcc := $(shell $(CC) $(CFLAGS) --print-libgcc-file-name)
 FLATLIBS = ../libcflat/libcflat.a $(libgcc) ../libcflat/$(ARCH)/libeabi.a
 
 -include .*.d
+
+CFLAGS += -I../tztest
 
 ##################################################################
 
